feat: enhance lab uploads workflow
